@@ -7,41 +7,55 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct H5F_retry_info_t {
+ *     unsigned int nbins;
+ *     uint32_t* retries[21];
+ * };
+ * }
+ */
 public class H5F_retry_info_t {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("nbins"),
-        MemoryLayout.paddingLayout(32),
-        MemoryLayout.sequenceLayout(21, Constants$root.C_POINTER$LAYOUT).withName("retries")
-    ).withName("H5F_retry_info_t");
     public static MemoryLayout $LAYOUT() {
-        return H5F_retry_info_t.$struct$LAYOUT;
+        return constants$169.const$2;
     }
-    static final VarHandle nbins$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("nbins"));
     public static VarHandle nbins$VH() {
-        return H5F_retry_info_t.nbins$VH;
+        return constants$169.const$3;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * unsigned int nbins;
+     * }
+     */
     public static int nbins$get(MemorySegment seg) {
-        return (int)H5F_retry_info_t.nbins$VH.get(seg);
+        return (int)constants$169.const$3.get(seg);
     }
-    public static void nbins$set( MemorySegment seg, int x) {
-        H5F_retry_info_t.nbins$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * unsigned int nbins;
+     * }
+     */
+    public static void nbins$set(MemorySegment seg, int x) {
+        constants$169.const$3.set(seg, x);
     }
     public static int nbins$get(MemorySegment seg, long index) {
-        return (int)H5F_retry_info_t.nbins$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$169.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void nbins$set(MemorySegment seg, long index, int x) {
-        H5F_retry_info_t.nbins$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$169.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment retries$slice(MemorySegment seg) {
         return seg.asSlice(8, 168);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
