@@ -7,17 +7,22 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * int (*H5P_prp_get_func_t)(long,char*,unsigned long,void*);
+ * }
+ */
 public interface H5P_prp_get_func_t {
 
-    int apply(long _x0, java.lang.foreign.MemoryAddress _x1, long _x2, java.lang.foreign.MemoryAddress _x3);
-    static MemorySegment allocate(H5P_prp_get_func_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(H5P_prp_get_func_t.class, fi, constants$129.H5P_prp_get_func_t$FUNC, session);
+    int apply(long prop_id, java.lang.foreign.MemorySegment name, long size, java.lang.foreign.MemorySegment value);
+    static MemorySegment allocate(H5P_prp_get_func_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$221.const$4, fi, constants$204.const$5, scope);
     }
-    static H5P_prp_get_func_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (long __x0, java.lang.foreign.MemoryAddress __x1, long __x2, java.lang.foreign.MemoryAddress __x3) -> {
+    static H5P_prp_get_func_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (long _prop_id, java.lang.foreign.MemorySegment _name, long _size, java.lang.foreign.MemorySegment _value) -> {
             try {
-                return (int)constants$129.H5P_prp_get_func_t$MH.invokeExact((Addressable)symbol, __x0, (java.lang.foreign.Addressable)__x1, __x2, (java.lang.foreign.Addressable)__x3);
+                return (int)constants$221.const$1.invokeExact(symbol, _prop_id, _name, _size, _value);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
