@@ -7,488 +7,787 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct _IO_FILE {
+ *     int _flags;
+ *     char* _IO_read_ptr;
+ *     char* _IO_read_end;
+ *     char* _IO_read_base;
+ *     char* _IO_write_base;
+ *     char* _IO_write_ptr;
+ *     char* _IO_write_end;
+ *     char* _IO_buf_base;
+ *     char* _IO_buf_end;
+ *     char* _IO_save_base;
+ *     char* _IO_backup_base;
+ *     char* _IO_save_end;
+ *     struct _IO_marker* _markers;
+ *     struct _IO_FILE* _chain;
+ *     int _fileno;
+ *     int _flags2;
+ *     __off_t _old_offset;
+ *     unsigned short _cur_column;
+ *     signed char _vtable_offset;
+ *     char _shortbuf[1];
+ *     _IO_lock_t* _lock;
+ *     __off64_t _offset;
+ *     struct _IO_codecvt* _codecvt;
+ *     struct _IO_wide_data* _wide_data;
+ *     struct _IO_FILE* _freeres_list;
+ *     void* _freeres_buf;
+ *     size_t __pad5;
+ *     int _mode;
+ *     char _unused2[20];
+ * };
+ * }
+ */
 public class _IO_FILE {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("_flags"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_ptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_ptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_buf_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_buf_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_save_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_backup_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_save_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_markers"),
-        Constants$root.C_POINTER$LAYOUT.withName("_chain"),
-        Constants$root.C_INT$LAYOUT.withName("_fileno"),
-        Constants$root.C_INT$LAYOUT.withName("_flags2"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("_old_offset"),
-        Constants$root.C_SHORT$LAYOUT.withName("_cur_column"),
-        Constants$root.C_CHAR$LAYOUT.withName("_vtable_offset"),
-        MemoryLayout.sequenceLayout(1, Constants$root.C_CHAR$LAYOUT).withName("_shortbuf"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("_lock"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("_offset"),
-        Constants$root.C_POINTER$LAYOUT.withName("_codecvt"),
-        Constants$root.C_POINTER$LAYOUT.withName("_wide_data"),
-        Constants$root.C_POINTER$LAYOUT.withName("_freeres_list"),
-        Constants$root.C_POINTER$LAYOUT.withName("_freeres_buf"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("__pad5"),
-        Constants$root.C_INT$LAYOUT.withName("_mode"),
-        MemoryLayout.sequenceLayout(20, Constants$root.C_CHAR$LAYOUT).withName("_unused2")
-    ).withName("_IO_FILE");
     public static MemoryLayout $LAYOUT() {
-        return _IO_FILE.$struct$LAYOUT;
+        return constants$104.const$2;
     }
-    static final VarHandle _flags$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_flags"));
     public static VarHandle _flags$VH() {
-        return _IO_FILE._flags$VH;
+        return constants$104.const$3;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int _flags;
+     * }
+     */
     public static int _flags$get(MemorySegment seg) {
-        return (int)_IO_FILE._flags$VH.get(seg);
+        return (int)constants$104.const$3.get(seg);
     }
-    public static void _flags$set( MemorySegment seg, int x) {
-        _IO_FILE._flags$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int _flags;
+     * }
+     */
+    public static void _flags$set(MemorySegment seg, int x) {
+        constants$104.const$3.set(seg, x);
     }
     public static int _flags$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._flags$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$104.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _flags$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._flags$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$104.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_ptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_ptr"));
     public static VarHandle _IO_read_ptr$VH() {
-        return _IO_FILE._IO_read_ptr$VH;
+        return constants$104.const$4;
     }
-    public static MemoryAddress _IO_read_ptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_ptr$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_read_ptr;
+     * }
+     */
+    public static MemorySegment _IO_read_ptr$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$104.const$4.get(seg);
     }
-    public static void _IO_read_ptr$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_read_ptr$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_read_ptr;
+     * }
+     */
+    public static void _IO_read_ptr$set(MemorySegment seg, MemorySegment x) {
+        constants$104.const$4.set(seg, x);
     }
-    public static MemoryAddress _IO_read_ptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_ptr$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_read_ptr$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$104.const$4.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_read_ptr$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_read_ptr$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_read_ptr$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$104.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_end"));
     public static VarHandle _IO_read_end$VH() {
-        return _IO_FILE._IO_read_end$VH;
+        return constants$104.const$5;
     }
-    public static MemoryAddress _IO_read_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_end$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_read_end;
+     * }
+     */
+    public static MemorySegment _IO_read_end$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$104.const$5.get(seg);
     }
-    public static void _IO_read_end$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_read_end$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_read_end;
+     * }
+     */
+    public static void _IO_read_end$set(MemorySegment seg, MemorySegment x) {
+        constants$104.const$5.set(seg, x);
     }
-    public static MemoryAddress _IO_read_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_end$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_read_end$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$104.const$5.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_read_end$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_read_end$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_read_end$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$104.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_base"));
     public static VarHandle _IO_read_base$VH() {
-        return _IO_FILE._IO_read_base$VH;
+        return constants$105.const$0;
     }
-    public static MemoryAddress _IO_read_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_base$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_read_base;
+     * }
+     */
+    public static MemorySegment _IO_read_base$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$0.get(seg);
     }
-    public static void _IO_read_base$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_read_base$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_read_base;
+     * }
+     */
+    public static void _IO_read_base$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$0.set(seg, x);
     }
-    public static MemoryAddress _IO_read_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_read_base$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_read_base$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$0.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_read_base$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_read_base$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_read_base$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_base"));
     public static VarHandle _IO_write_base$VH() {
-        return _IO_FILE._IO_write_base$VH;
+        return constants$105.const$1;
     }
-    public static MemoryAddress _IO_write_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_base$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_write_base;
+     * }
+     */
+    public static MemorySegment _IO_write_base$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$1.get(seg);
     }
-    public static void _IO_write_base$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_write_base$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_write_base;
+     * }
+     */
+    public static void _IO_write_base$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$1.set(seg, x);
     }
-    public static MemoryAddress _IO_write_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_base$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_write_base$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$1.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_write_base$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_write_base$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_write_base$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_ptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_ptr"));
     public static VarHandle _IO_write_ptr$VH() {
-        return _IO_FILE._IO_write_ptr$VH;
+        return constants$105.const$2;
     }
-    public static MemoryAddress _IO_write_ptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_ptr$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_write_ptr;
+     * }
+     */
+    public static MemorySegment _IO_write_ptr$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$2.get(seg);
     }
-    public static void _IO_write_ptr$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_write_ptr$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_write_ptr;
+     * }
+     */
+    public static void _IO_write_ptr$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$2.set(seg, x);
     }
-    public static MemoryAddress _IO_write_ptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_ptr$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_write_ptr$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$2.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_write_ptr$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_write_ptr$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_write_ptr$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_end"));
     public static VarHandle _IO_write_end$VH() {
-        return _IO_FILE._IO_write_end$VH;
+        return constants$105.const$3;
     }
-    public static MemoryAddress _IO_write_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_end$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_write_end;
+     * }
+     */
+    public static MemorySegment _IO_write_end$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$3.get(seg);
     }
-    public static void _IO_write_end$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_write_end$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_write_end;
+     * }
+     */
+    public static void _IO_write_end$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$3.set(seg, x);
     }
-    public static MemoryAddress _IO_write_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_write_end$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_write_end$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$3.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_write_end$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_write_end$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_write_end$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_buf_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_buf_base"));
     public static VarHandle _IO_buf_base$VH() {
-        return _IO_FILE._IO_buf_base$VH;
+        return constants$105.const$4;
     }
-    public static MemoryAddress _IO_buf_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_buf_base$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_buf_base;
+     * }
+     */
+    public static MemorySegment _IO_buf_base$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$4.get(seg);
     }
-    public static void _IO_buf_base$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_buf_base$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_buf_base;
+     * }
+     */
+    public static void _IO_buf_base$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$4.set(seg, x);
     }
-    public static MemoryAddress _IO_buf_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_buf_base$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_buf_base$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$4.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_buf_base$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_buf_base$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_buf_base$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_buf_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_buf_end"));
     public static VarHandle _IO_buf_end$VH() {
-        return _IO_FILE._IO_buf_end$VH;
+        return constants$105.const$5;
     }
-    public static MemoryAddress _IO_buf_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_buf_end$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_buf_end;
+     * }
+     */
+    public static MemorySegment _IO_buf_end$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$5.get(seg);
     }
-    public static void _IO_buf_end$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_buf_end$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_buf_end;
+     * }
+     */
+    public static void _IO_buf_end$set(MemorySegment seg, MemorySegment x) {
+        constants$105.const$5.set(seg, x);
     }
-    public static MemoryAddress _IO_buf_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_buf_end$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_buf_end$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$105.const$5.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_buf_end$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_buf_end$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_buf_end$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$105.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_save_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_save_base"));
     public static VarHandle _IO_save_base$VH() {
-        return _IO_FILE._IO_save_base$VH;
+        return constants$106.const$0;
     }
-    public static MemoryAddress _IO_save_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_save_base$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_save_base;
+     * }
+     */
+    public static MemorySegment _IO_save_base$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$0.get(seg);
     }
-    public static void _IO_save_base$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_save_base$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_save_base;
+     * }
+     */
+    public static void _IO_save_base$set(MemorySegment seg, MemorySegment x) {
+        constants$106.const$0.set(seg, x);
     }
-    public static MemoryAddress _IO_save_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_save_base$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_save_base$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$0.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_save_base$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_save_base$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_save_base$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$106.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_backup_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_backup_base"));
     public static VarHandle _IO_backup_base$VH() {
-        return _IO_FILE._IO_backup_base$VH;
+        return constants$106.const$1;
     }
-    public static MemoryAddress _IO_backup_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_backup_base$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_backup_base;
+     * }
+     */
+    public static MemorySegment _IO_backup_base$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$1.get(seg);
     }
-    public static void _IO_backup_base$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_backup_base$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_backup_base;
+     * }
+     */
+    public static void _IO_backup_base$set(MemorySegment seg, MemorySegment x) {
+        constants$106.const$1.set(seg, x);
     }
-    public static MemoryAddress _IO_backup_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_backup_base$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_backup_base$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$1.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_backup_base$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_backup_base$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_backup_base$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$106.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_save_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_save_end"));
     public static VarHandle _IO_save_end$VH() {
-        return _IO_FILE._IO_save_end$VH;
+        return constants$106.const$2;
     }
-    public static MemoryAddress _IO_save_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_save_end$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * char* _IO_save_end;
+     * }
+     */
+    public static MemorySegment _IO_save_end$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$2.get(seg);
     }
-    public static void _IO_save_end$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._IO_save_end$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * char* _IO_save_end;
+     * }
+     */
+    public static void _IO_save_end$set(MemorySegment seg, MemorySegment x) {
+        constants$106.const$2.set(seg, x);
     }
-    public static MemoryAddress _IO_save_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._IO_save_end$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _IO_save_end$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$2.get(seg.asSlice(index*sizeof()));
     }
-    public static void _IO_save_end$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._IO_save_end$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _IO_save_end$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$106.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _markers$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_markers"));
     public static VarHandle _markers$VH() {
-        return _IO_FILE._markers$VH;
+        return constants$106.const$3;
     }
-    public static MemoryAddress _markers$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._markers$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * struct _IO_marker* _markers;
+     * }
+     */
+    public static MemorySegment _markers$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$3.get(seg);
     }
-    public static void _markers$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._markers$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * struct _IO_marker* _markers;
+     * }
+     */
+    public static void _markers$set(MemorySegment seg, MemorySegment x) {
+        constants$106.const$3.set(seg, x);
     }
-    public static MemoryAddress _markers$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._markers$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _markers$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$3.get(seg.asSlice(index*sizeof()));
     }
-    public static void _markers$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._markers$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _markers$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$106.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _chain$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_chain"));
     public static VarHandle _chain$VH() {
-        return _IO_FILE._chain$VH;
+        return constants$106.const$4;
     }
-    public static MemoryAddress _chain$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._chain$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * struct _IO_FILE* _chain;
+     * }
+     */
+    public static MemorySegment _chain$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$4.get(seg);
     }
-    public static void _chain$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._chain$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * struct _IO_FILE* _chain;
+     * }
+     */
+    public static void _chain$set(MemorySegment seg, MemorySegment x) {
+        constants$106.const$4.set(seg, x);
     }
-    public static MemoryAddress _chain$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._chain$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _chain$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$106.const$4.get(seg.asSlice(index*sizeof()));
     }
-    public static void _chain$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._chain$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _chain$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$106.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _fileno$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_fileno"));
     public static VarHandle _fileno$VH() {
-        return _IO_FILE._fileno$VH;
+        return constants$106.const$5;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int _fileno;
+     * }
+     */
     public static int _fileno$get(MemorySegment seg) {
-        return (int)_IO_FILE._fileno$VH.get(seg);
+        return (int)constants$106.const$5.get(seg);
     }
-    public static void _fileno$set( MemorySegment seg, int x) {
-        _IO_FILE._fileno$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int _fileno;
+     * }
+     */
+    public static void _fileno$set(MemorySegment seg, int x) {
+        constants$106.const$5.set(seg, x);
     }
     public static int _fileno$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._fileno$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$106.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _fileno$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._fileno$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$106.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _flags2$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_flags2"));
     public static VarHandle _flags2$VH() {
-        return _IO_FILE._flags2$VH;
+        return constants$107.const$0;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int _flags2;
+     * }
+     */
     public static int _flags2$get(MemorySegment seg) {
-        return (int)_IO_FILE._flags2$VH.get(seg);
+        return (int)constants$107.const$0.get(seg);
     }
-    public static void _flags2$set( MemorySegment seg, int x) {
-        _IO_FILE._flags2$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int _flags2;
+     * }
+     */
+    public static void _flags2$set(MemorySegment seg, int x) {
+        constants$107.const$0.set(seg, x);
     }
     public static int _flags2$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._flags2$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$107.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _flags2$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._flags2$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$107.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _old_offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_old_offset"));
     public static VarHandle _old_offset$VH() {
-        return _IO_FILE._old_offset$VH;
+        return constants$107.const$1;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * __off_t _old_offset;
+     * }
+     */
     public static long _old_offset$get(MemorySegment seg) {
-        return (long)_IO_FILE._old_offset$VH.get(seg);
+        return (long)constants$107.const$1.get(seg);
     }
-    public static void _old_offset$set( MemorySegment seg, long x) {
-        _IO_FILE._old_offset$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * __off_t _old_offset;
+     * }
+     */
+    public static void _old_offset$set(MemorySegment seg, long x) {
+        constants$107.const$1.set(seg, x);
     }
     public static long _old_offset$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE._old_offset$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$107.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _old_offset$set(MemorySegment seg, long index, long x) {
-        _IO_FILE._old_offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$107.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _cur_column$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_cur_column"));
     public static VarHandle _cur_column$VH() {
-        return _IO_FILE._cur_column$VH;
+        return constants$107.const$2;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * unsigned short _cur_column;
+     * }
+     */
     public static short _cur_column$get(MemorySegment seg) {
-        return (short)_IO_FILE._cur_column$VH.get(seg);
+        return (short)constants$107.const$2.get(seg);
     }
-    public static void _cur_column$set( MemorySegment seg, short x) {
-        _IO_FILE._cur_column$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * unsigned short _cur_column;
+     * }
+     */
+    public static void _cur_column$set(MemorySegment seg, short x) {
+        constants$107.const$2.set(seg, x);
     }
     public static short _cur_column$get(MemorySegment seg, long index) {
-        return (short)_IO_FILE._cur_column$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$107.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _cur_column$set(MemorySegment seg, long index, short x) {
-        _IO_FILE._cur_column$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$107.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _vtable_offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_vtable_offset"));
     public static VarHandle _vtable_offset$VH() {
-        return _IO_FILE._vtable_offset$VH;
+        return constants$107.const$3;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * signed char _vtable_offset;
+     * }
+     */
     public static byte _vtable_offset$get(MemorySegment seg) {
-        return (byte)_IO_FILE._vtable_offset$VH.get(seg);
+        return (byte)constants$107.const$3.get(seg);
     }
-    public static void _vtable_offset$set( MemorySegment seg, byte x) {
-        _IO_FILE._vtable_offset$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * signed char _vtable_offset;
+     * }
+     */
+    public static void _vtable_offset$set(MemorySegment seg, byte x) {
+        constants$107.const$3.set(seg, x);
     }
     public static byte _vtable_offset$get(MemorySegment seg, long index) {
-        return (byte)_IO_FILE._vtable_offset$VH.get(seg.asSlice(index*sizeof()));
+        return (byte)constants$107.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _vtable_offset$set(MemorySegment seg, long index, byte x) {
-        _IO_FILE._vtable_offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$107.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment _shortbuf$slice(MemorySegment seg) {
         return seg.asSlice(131, 1);
     }
-    static final VarHandle _lock$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_lock"));
     public static VarHandle _lock$VH() {
-        return _IO_FILE._lock$VH;
+        return constants$107.const$4;
     }
-    public static MemoryAddress _lock$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._lock$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * _IO_lock_t* _lock;
+     * }
+     */
+    public static MemorySegment _lock$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$107.const$4.get(seg);
     }
-    public static void _lock$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._lock$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * _IO_lock_t* _lock;
+     * }
+     */
+    public static void _lock$set(MemorySegment seg, MemorySegment x) {
+        constants$107.const$4.set(seg, x);
     }
-    public static MemoryAddress _lock$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._lock$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _lock$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$107.const$4.get(seg.asSlice(index*sizeof()));
     }
-    public static void _lock$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._lock$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _lock$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$107.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_offset"));
     public static VarHandle _offset$VH() {
-        return _IO_FILE._offset$VH;
+        return constants$107.const$5;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * __off64_t _offset;
+     * }
+     */
     public static long _offset$get(MemorySegment seg) {
-        return (long)_IO_FILE._offset$VH.get(seg);
+        return (long)constants$107.const$5.get(seg);
     }
-    public static void _offset$set( MemorySegment seg, long x) {
-        _IO_FILE._offset$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * __off64_t _offset;
+     * }
+     */
+    public static void _offset$set(MemorySegment seg, long x) {
+        constants$107.const$5.set(seg, x);
     }
     public static long _offset$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE._offset$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$107.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _offset$set(MemorySegment seg, long index, long x) {
-        _IO_FILE._offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$107.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _codecvt$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_codecvt"));
     public static VarHandle _codecvt$VH() {
-        return _IO_FILE._codecvt$VH;
+        return constants$108.const$0;
     }
-    public static MemoryAddress _codecvt$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._codecvt$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * struct _IO_codecvt* _codecvt;
+     * }
+     */
+    public static MemorySegment _codecvt$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$0.get(seg);
     }
-    public static void _codecvt$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._codecvt$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * struct _IO_codecvt* _codecvt;
+     * }
+     */
+    public static void _codecvt$set(MemorySegment seg, MemorySegment x) {
+        constants$108.const$0.set(seg, x);
     }
-    public static MemoryAddress _codecvt$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._codecvt$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _codecvt$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$0.get(seg.asSlice(index*sizeof()));
     }
-    public static void _codecvt$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._codecvt$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _codecvt$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$108.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _wide_data$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_wide_data"));
     public static VarHandle _wide_data$VH() {
-        return _IO_FILE._wide_data$VH;
+        return constants$108.const$1;
     }
-    public static MemoryAddress _wide_data$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._wide_data$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * struct _IO_wide_data* _wide_data;
+     * }
+     */
+    public static MemorySegment _wide_data$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$1.get(seg);
     }
-    public static void _wide_data$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._wide_data$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * struct _IO_wide_data* _wide_data;
+     * }
+     */
+    public static void _wide_data$set(MemorySegment seg, MemorySegment x) {
+        constants$108.const$1.set(seg, x);
     }
-    public static MemoryAddress _wide_data$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._wide_data$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _wide_data$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$1.get(seg.asSlice(index*sizeof()));
     }
-    public static void _wide_data$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._wide_data$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _wide_data$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$108.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _freeres_list$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_freeres_list"));
     public static VarHandle _freeres_list$VH() {
-        return _IO_FILE._freeres_list$VH;
+        return constants$108.const$2;
     }
-    public static MemoryAddress _freeres_list$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._freeres_list$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * struct _IO_FILE* _freeres_list;
+     * }
+     */
+    public static MemorySegment _freeres_list$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$2.get(seg);
     }
-    public static void _freeres_list$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._freeres_list$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * struct _IO_FILE* _freeres_list;
+     * }
+     */
+    public static void _freeres_list$set(MemorySegment seg, MemorySegment x) {
+        constants$108.const$2.set(seg, x);
     }
-    public static MemoryAddress _freeres_list$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._freeres_list$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _freeres_list$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$2.get(seg.asSlice(index*sizeof()));
     }
-    public static void _freeres_list$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._freeres_list$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _freeres_list$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$108.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _freeres_buf$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_freeres_buf"));
     public static VarHandle _freeres_buf$VH() {
-        return _IO_FILE._freeres_buf$VH;
+        return constants$108.const$3;
     }
-    public static MemoryAddress _freeres_buf$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._freeres_buf$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet :
+     * void* _freeres_buf;
+     * }
+     */
+    public static MemorySegment _freeres_buf$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$3.get(seg);
     }
-    public static void _freeres_buf$set( MemorySegment seg, MemoryAddress x) {
-        _IO_FILE._freeres_buf$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * void* _freeres_buf;
+     * }
+     */
+    public static void _freeres_buf$set(MemorySegment seg, MemorySegment x) {
+        constants$108.const$3.set(seg, x);
     }
-    public static MemoryAddress _freeres_buf$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)_IO_FILE._freeres_buf$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment _freeres_buf$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$108.const$3.get(seg.asSlice(index*sizeof()));
     }
-    public static void _freeres_buf$set(MemorySegment seg, long index, MemoryAddress x) {
-        _IO_FILE._freeres_buf$VH.set(seg.asSlice(index*sizeof()), x);
+    public static void _freeres_buf$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$108.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __pad5$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__pad5"));
     public static VarHandle __pad5$VH() {
-        return _IO_FILE.__pad5$VH;
+        return constants$108.const$4;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * size_t __pad5;
+     * }
+     */
     public static long __pad5$get(MemorySegment seg) {
-        return (long)_IO_FILE.__pad5$VH.get(seg);
+        return (long)constants$108.const$4.get(seg);
     }
-    public static void __pad5$set( MemorySegment seg, long x) {
-        _IO_FILE.__pad5$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * size_t __pad5;
+     * }
+     */
+    public static void __pad5$set(MemorySegment seg, long x) {
+        constants$108.const$4.set(seg, x);
     }
     public static long __pad5$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE.__pad5$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$108.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void __pad5$set(MemorySegment seg, long index, long x) {
-        _IO_FILE.__pad5$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$108.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _mode$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_mode"));
     public static VarHandle _mode$VH() {
-        return _IO_FILE._mode$VH;
+        return constants$108.const$5;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int _mode;
+     * }
+     */
     public static int _mode$get(MemorySegment seg) {
-        return (int)_IO_FILE._mode$VH.get(seg);
+        return (int)constants$108.const$5.get(seg);
     }
-    public static void _mode$set( MemorySegment seg, int x) {
-        _IO_FILE._mode$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int _mode;
+     * }
+     */
+    public static void _mode$set(MemorySegment seg, int x) {
+        constants$108.const$5.set(seg, x);
     }
     public static int _mode$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._mode$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$108.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _mode$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._mode$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$108.const$5.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment _unused2$slice(MemorySegment seg) {
         return seg.asSlice(196, 20);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
