@@ -7,68 +7,97 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct {
+ *     int __count;
+ *     union  __value;
+ * };
+ * }
+ */
 public class __mbstate_t {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("__count"),
-        MemoryLayout.unionLayout(
-            Constants$root.C_INT$LAYOUT.withName("__wch"),
-            MemoryLayout.sequenceLayout(4, Constants$root.C_CHAR$LAYOUT).withName("__wchb")
-        ).withName("__value")
-    );
     public static MemoryLayout $LAYOUT() {
-        return __mbstate_t.$struct$LAYOUT;
+        return constants$103.const$0;
     }
-    static final VarHandle __count$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__count"));
     public static VarHandle __count$VH() {
-        return __mbstate_t.__count$VH;
+        return constants$103.const$1;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int __count;
+     * }
+     */
     public static int __count$get(MemorySegment seg) {
-        return (int)__mbstate_t.__count$VH.get(seg);
+        return (int)constants$103.const$1.get(seg);
     }
-    public static void __count$set( MemorySegment seg, int x) {
-        __mbstate_t.__count$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int __count;
+     * }
+     */
+    public static void __count$set(MemorySegment seg, int x) {
+        constants$103.const$1.set(seg, x);
     }
     public static int __count$get(MemorySegment seg, long index) {
-        return (int)__mbstate_t.__count$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$103.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void __count$set(MemorySegment seg, long index, int x) {
-        __mbstate_t.__count$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$103.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    public static class __value {
+    /**
+     * {@snippet :
+     * union {
+     *     unsigned int __wch;
+     *     char __wchb[4];
+     * };
+     * }
+     */
+    public static final class __value {
 
-        static final  GroupLayout __value$union$LAYOUT = MemoryLayout.unionLayout(
-            Constants$root.C_INT$LAYOUT.withName("__wch"),
-            MemoryLayout.sequenceLayout(4, Constants$root.C_CHAR$LAYOUT).withName("__wchb")
-        );
+        // Suppresses default constructor, ensuring non-instantiability.
+        private __value() {}
         public static MemoryLayout $LAYOUT() {
-            return __value.__value$union$LAYOUT;
+            return constants$103.const$2;
         }
-        static final VarHandle __wch$VH = __value$union$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__wch"));
         public static VarHandle __wch$VH() {
-            return __value.__wch$VH;
+            return constants$103.const$3;
         }
+        /**
+         * Getter for field:
+         * {@snippet :
+         * unsigned int __wch;
+         * }
+         */
         public static int __wch$get(MemorySegment seg) {
-            return (int)__value.__wch$VH.get(seg);
+            return (int)constants$103.const$3.get(seg);
         }
-        public static void __wch$set( MemorySegment seg, int x) {
-            __value.__wch$VH.set(seg, x);
+        /**
+         * Setter for field:
+         * {@snippet :
+         * unsigned int __wch;
+         * }
+         */
+        public static void __wch$set(MemorySegment seg, int x) {
+            constants$103.const$3.set(seg, x);
         }
         public static int __wch$get(MemorySegment seg, long index) {
-            return (int)__value.__wch$VH.get(seg.asSlice(index*sizeof()));
+            return (int)constants$103.const$3.get(seg.asSlice(index*sizeof()));
         }
         public static void __wch$set(MemorySegment seg, long index, int x) {
-            __value.__wch$VH.set(seg.asSlice(index*sizeof()), x);
+            constants$103.const$3.set(seg.asSlice(index*sizeof()), x);
         }
         public static MemorySegment __wchb$slice(MemorySegment seg) {
             return seg.asSlice(0, 4);
         }
         public static long sizeof() { return $LAYOUT().byteSize(); }
         public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+        public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+        public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
     }
 
     public static MemorySegment __value$slice(MemorySegment seg) {
@@ -76,10 +105,10 @@ public class __mbstate_t {
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
