@@ -2,19 +2,27 @@
 
 package com.sunya.netchdf.mfhdfClib.ffm;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * void (*atexit$__func)();
+ * }
+ */
 public interface atexit$__func {
 
     void apply();
-    static MemorySegment allocate(atexit$__func fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(atexit$__func.class, fi, constants$32.atexit$__func$FUNC, session);
+    static MemorySegment allocate(atexit$__func fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$61.const$3, fi, constants$61.const$1, scope);
     }
-    static atexit$__func ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+    static atexit$__func ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return () -> {
             try {
-                constants$32.atexit$__func$MH.invokeExact((Addressable)symbol);
+                constants$61.const$4.invokeExact(symbol);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
