@@ -2,43 +2,60 @@
 
 package com.sunya.netchdf.mfhdfClib.ffm;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * union pthread_attr_t {
+ *     char __size[56];
+ *     long __align;
+ * };
+ * }
+ */
 public class pthread_attr_t {
 
-    static final  GroupLayout $union$LAYOUT = MemoryLayout.unionLayout(
-        MemoryLayout.sequenceLayout(56, Constants$root.C_CHAR$LAYOUT).withName("__size"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("__align")
-    ).withName("pthread_attr_t");
     public static MemoryLayout $LAYOUT() {
-        return pthread_attr_t.$union$LAYOUT;
+        return constants$49.const$3;
     }
     public static MemorySegment __size$slice(MemorySegment seg) {
         return seg.asSlice(0, 56);
     }
-    static final VarHandle __align$VH = $union$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__align"));
     public static VarHandle __align$VH() {
-        return pthread_attr_t.__align$VH;
+        return constants$49.const$4;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * long __align;
+     * }
+     */
     public static long __align$get(MemorySegment seg) {
-        return (long)pthread_attr_t.__align$VH.get(seg);
+        return (long)constants$49.const$4.get(seg);
     }
-    public static void __align$set( MemorySegment seg, long x) {
-        pthread_attr_t.__align$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * long __align;
+     * }
+     */
+    public static void __align$set(MemorySegment seg, long x) {
+        constants$49.const$4.set(seg, x);
     }
     public static long __align$get(MemorySegment seg, long index) {
-        return (long)pthread_attr_t.__align$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$49.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void __align$set(MemorySegment seg, long index, long x) {
-        pthread_attr_t.__align$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$49.const$4.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
